--- a/src/orin_wa_report/web/templates/index.html
+++ b/src/orin_wa_report/web/templates/index.html
@@ -85,7 +85,7 @@
   </section>
 
   <script>
-    const API_BASE = 'http://localhost:8000'
+    const API_BASE = ''
 
     // Utilities for toggles
     function bindToggle(id){
