add few user ids

--- a/src/orin_wa_report/web/templates/index.html
+++ b/src/orin_wa_report/web/templates/index.html
@@ -43,8 +43,10 @@
             <div class="row"><label>Mimic User</label>
               <select id="mimic_user">
                 <option>None</option>
+                <option>41634</option>
                 <option>41677</option>
                 <option>41885</option>
+                <option>42079</option>
               </select>
             </div>
             <div class="row"><button type="submit">Create User</button></div>
